// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="false"
        class="emotion-2 emotion-3"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«r0»"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«r0»"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="false"
        class="emotion-2 emotion-3"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="emotion-4 emotion-5"
          id="«rc»"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«rc»"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="true"
        class="emotion-2 emotion-3"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="emotion-4 emotion-5"
          disabled=""
          id="«r3»"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«r3»"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when error 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="false"
        class="emotion-2 emotion-3"
        data-checked="false"
        data-error="Invalid value"
      >
        <input
          aria-disabled="false"
          aria-invalid="true"
          class="emotion-4 emotion-5"
          id="«rf»"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«rf»"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when helper 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

.emotion-14 {
  margin-left: 2rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="false"
        class="emotion-2 emotion-3"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«ri»"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«ri»"
        >
          Choice
        </label>
      </div>
      <span
        class="emotion-14 emotion-15 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly with tooltip 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-4[aria-disabled='false'],
.emotion-4[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 .emotion-11 {
  fill: #e5dbfd;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 .emotion-11 {
  fill: #ffd3e3;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4[aria-disabled='true']>label,
.emotion-4[aria-disabled='true'] .emotion-7 {
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 .emotion-11 {
  fill: #f3f3f4;
}

.emotion-6 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-6+.emotion-9 .emotion-13 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6:checked+svg .emotion-13 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:checked[aria-disabled='false'][aria-invalid='false']+.emotion-9 {
  fill: #8c40ef;
}

.emotion-6:checked[aria-disabled='true'][aria-invalid='false']+.emotion-9 {
  fill: #d8c5fc;
}

.emotion-6[aria-invalid='true']:not([aria-disabled='true'])+.emotion-9 {
  fill: #e51963;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 .emotion-11 {
  fill: #f1eefc;
}

.emotion-6[aria-disabled='false']:focus-visible+.emotion-9 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 .emotion-11 {
  fill: #ffebf2;
}

.emotion-8 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-8 .emotion-11 {
  fill: #ffffff;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«r7»"
      aria-describedby="«r7»"
      class="emotion-0 emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-disabled="false"
          class="emotion-4 emotion-5"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="emotion-6 emotion-7"
            id="«r6»"
            name="radio"
            type="radio"
            value="choice"
          />
          <svg
            class="emotion-8 emotion-9"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="emotion-10 emotion-11"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="emotion-12 emotion-13"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="emotion-14 emotion-15 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            for="«r6»"
          >
            Choice
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders without name 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-2[aria-disabled='false'],
.emotion-2[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 {
  fill: #8c40ef;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5+.emotion-7 .emotion-9 {
  fill: #e5dbfd;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 {
  fill: #b3144d;
}

.emotion-2:hover[aria-disabled='false'] .emotion-5[aria-invalid='true']+.emotion-7 .emotion-9 {
  fill: #ffd3e3;
}

.emotion-2[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2[aria-disabled='true']>label,
.emotion-2[aria-disabled='true'] .emotion-5 {
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-2[aria-disabled='true'] .emotion-7 .emotion-9 {
  fill: #f3f3f4;
}

.emotion-4 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-4+.emotion-7 .emotion-11 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-4:checked+svg .emotion-11 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:checked[aria-disabled='false'][aria-invalid='false']+.emotion-7 {
  fill: #8c40ef;
}

.emotion-4:checked[aria-disabled='true'][aria-invalid='false']+.emotion-7 {
  fill: #d8c5fc;
}

.emotion-4[aria-invalid='true']:not([aria-disabled='true'])+.emotion-7 {
  fill: #e51963;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-4[aria-disabled='false']:active+.emotion-7 .emotion-9 {
  fill: #f1eefc;
}

.emotion-4[aria-disabled='false']:focus-visible+.emotion-7 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-4[aria-invalid='true']:focus+.emotion-7 .emotion-9 {
  fill: #ffebf2;
}

.emotion-6 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-6 .emotion-9 {
  fill: #ffffff;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        aria-disabled="true"
        class="emotion-2 emotion-3"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="emotion-4 emotion-5"
          disabled=""
          id="«r9»"
          type="radio"
          value="choice"
        />
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="emotion-8 emotion-9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="emotion-10 emotion-11"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="emotion-12 emotion-13 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          for="«r9»"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
